--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
+
+h1{
+  font-family: 'poppins';
+  font-weight: 300;
+  font-size: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2{
+  font-family: 'poppins';
+  font-size: 13px;
+  font-weight: 500;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  max-width: 300px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.instagram-header {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.instagram-header ion-icon {
+  font-size: 24px;
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.instagram-header p {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+  font-family:'Franklin Gothic Medium';
+}
+.post-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.post-header img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.post-header h1 {
+  font-size: 18px;
+  margin: 0;
+}
+
+.post-image {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+.post-actions {
+  margin-top: 5px;
+}
+
+.post-actions button {
+  padding: 9px 9px ;
+  cursor: pointer;
+  background-color:transparent;
+  border: none;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+#display{
+font-size: 10px;
+}
+#icon{
+  height: 20px;
+  width: 20px;
+}
+
+.post-actions button:hover {
+  background-color: #a7a6a66b;
+  border-radius: 4px;
+}
+.comments input{
+  border-radius: 20px;
+  height: 25px;
+  width: 200px;
+}
+.comments button {
+  padding: 4px;
+  cursor: pointer;
+  background-color: transparent;
+  border: 1px solid #ddd8d8;
+  border-radius: 10px;
+  margin-left: 20px;
+}
+
+
+.comment-list {
+  margin-top: 10px;
+}
+
+.comment-list p {
+  margin: 3px 0;
+  padding: 5px;
+  background-color: #f9f9f9;
+  border: 1px solid #dddddda4;
+  border-radius: 4px;
+  word-wrap: break-word;
+}
+
+.comment-header{
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.comment-header img {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
